--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "projeto",
+  "name": "myapp",
   "version": "1.0.0",
   "description": "",
-  "main": "Compartilhamento_de_istudo.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
